@@ -6,15 +6,15 @@
 max_threads 5
 
 # File containing a list of agent names (one per line).
-agent_file /usr/share/pandora_server/util/pandora_xml_stress.agents
+agent_file agent_names.txt
 
 # Directory where XML data files will be placed, by default /tmp.
 # When sending files to a local Tentacle server make sure this directory
 # and Pandora FMS Server's incomingdir are different.
-temporal /var/spool/pandora/data_in
+temporal /tmp
 
 # Pandora FMS XML Stress log file, logs to stdout by default.
-log_file pandora_xml_stress.log
+log_file /dev/stdout
 
 # XML version, by default 1.0.
 xml_version 1.0
@@ -29,7 +29,7 @@ os_name Linux
 os_version 2.6
 
 # Agent interval, by default 300.
-agent_interval 900
+agent_interval 300
 
 # Data file generation start date, by default now.
 #time_from 2012-03-01 00:00:00
@@ -82,6 +82,8 @@ module_type generic_data
 module_description Network connections used in this machine
 module_exec type=RANDOM;variation=20;min=50;max=500
 module_unit conns
+module_attenuation 0.33
+module_attenuation_wdays 0 6
 module_end
 
 module_begin
@@ -98,6 +100,8 @@ module_type generic_data
 module_description Network throughtput for incoming data
 module_exec type=RANDOM;variation=50;min=0;max=1000000
 module_unit kbit/sec
+module_attenuation 0.5
+module_attenuation_wdays 0 6
 module_end
 
 module_begin
@@ -106,6 +110,8 @@ module_type generic_data
 module_description Network throughtput for Outgoing data
 module_exec type=RANDOM;variation=50;min=0;max=1000000
 module_unit kbit/sec
+module_attenuation 0.1
+module_attenuation_wdays 0 6
 module_end
 
 module_begin
